[gd_scene load_steps=12 format=3 uid="uid://bp6dbjsjji0pq"]

[ext_resource type="Script" uid="uid://bwc26dqxus8j8" path="res://Scripts/Work/HWorkCard.gd" id="1_aosbv"]
[ext_resource type="StyleBox" uid="uid://pfmb6a744j1s" path="res://Resources/Themes/Box-Light.tres" id="1_uu2wd"]
[ext_resource type="PackedScene" uid="uid://ci8hbvggabgnh" path="res://Scenes/ImageUrlLoader.tscn" id="2_ihmto"]
[ext_resource type="Texture2D" uid="uid://yjyvl733y0f8" path="res://Resources/Textures/Photo.svg" id="3_b0qtd"]
[ext_resource type="FontFile" uid="uid://cphm5abmdoidd" path="res://Resources/Fonts/SourceHanSansCN-Normal.otf" id="4_1mhrh"]
[ext_resource type="PackedScene" uid="uid://d2870yealvg0d" path="res://Scenes/ThemePainter.tscn" id="4_fcamc"]
[ext_resource type="SystemFont" uid="uid://qgdcrj7r5eya" path="res://Resources/Fonts/SystemFontBold.tres" id="5_u1nlc"]
[ext_resource type="Texture2D" uid="uid://dlh0ixpfywrqf" path="res://Resources/Textures/View.svg" id="5_v8p1o"]
[ext_resource type="SystemFont" uid="uid://cet1proxcxegx" path="res://Resources/Fonts/SystemFontMedium.tres" id="6_bv1ut"]
[ext_resource type="Texture2D" uid="uid://17vbiuntajpd" path="res://Resources/Textures/Like.svg" id="10_u1nlc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_phxa8"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 8
corner_radius_bottom_left = 8

[node name="HWorkCard" type="PanelContainer"]
custom_minimum_size = Vector2(0, 150)
offset_right = 155.0
offset_bottom = 150.0
theme_override_styles/panel = ExtResource("1_uu2wd")
script = ExtResource("1_aosbv")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Mask" type="PanelContainer" parent="HBoxContainer"]
clip_children = 1
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_phxa8")

[node name="PreviewTexture" parent="HBoxContainer/Mask" instance=ExtResource("2_ihmto")]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_b0qtd")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = -7

[node name="WorkNameLabel" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
theme_override_fonts/font = ExtResource("5_u1nlc")
theme_override_font_sizes/font_size = 20
text = "WorkName"
vertical_alignment = 1
text_overrun_behavior = 4

[node name="ThemePainter" parent="HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/WorkNameLabel" instance=ExtResource("4_fcamc")]

[node name="DescriptionLabel" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.490196)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
theme_override_constants/line_spacing = -7
theme_override_fonts/font = ExtResource("4_1mhrh")
text = "Description"
autowrap_mode = 2
text_overrun_behavior = 4

[node name="ThemePainter" parent="HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/DescriptionLabel" instance=ExtResource("4_fcamc")]

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ViewTimes" type="HBoxContainer" parent="HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ViewIcon" type="TextureRect" parent="HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/ViewTimes"]
self_modulate = Color(0.06, 0.06, 0.06, 0.490196)
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("5_v8p1o")
expand_mode = 1

[node name="ThemePainter" parent="HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/ViewTimes/ViewIcon" instance=ExtResource("4_fcamc")]

[node name="ViewTimes" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/ViewTimes"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.490196)
custom_minimum_size = Vector2(58, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
theme_override_fonts/font = ExtResource("6_bv1ut")
text = "--"
text_overrun_behavior = 3

[node name="ThemePainter" parent="HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/ViewTimes/ViewTimes" instance=ExtResource("4_fcamc")]

[node name="PraiseTimes" type="HBoxContainer" parent="HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PraiseIcon" type="TextureRect" parent="HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/PraiseTimes"]
self_modulate = Color(0.06, 0.06, 0.06, 0.490196)
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("10_u1nlc")
expand_mode = 1

[node name="ThemePainter" parent="HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/PraiseTimes/PraiseIcon" instance=ExtResource("4_fcamc")]

[node name="PraiseTimes" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/PraiseTimes"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.490196)
custom_minimum_size = Vector2(58, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
theme_override_fonts/font = ExtResource("6_bv1ut")
text = "--"
text_overrun_behavior = 3

[node name="ThemePainter" parent="HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/PraiseTimes/PraiseTimes" instance=ExtResource("4_fcamc")]

[connection signal="pressed" from="HBoxContainer/Mask/PreviewTexture" to="." method="_on_preview_texture_pressed"]
